--- a/joint_control/learn_posture.ipynb
+++ b/joint_control/learn_posture.ipynb
@@ -37,9 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -47,14 +47,6 @@
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: pylab import has clobbered these variables: ['clf', 'permutation']\n",
-      "`%matplotlib` prevents importing * from pylab and numpy\n"
      ]
     }
    ],
@@ -70,16 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Frog', 'HeadBack', 'Left', 'Knee', 'Crouch', 'Back', 'Belly', 'Right', 'Sit', 'Stand', 'StandInit']\n"
+      "['Right', 'Stand', 'StandInit', 'Frog', 'Knee', 'HeadBack', 'Back', 'Sit', 'Left', 'Crouch', 'Belly']\n"
      ]
     }
    ],
@@ -90,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -110,16 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 46,
    "metadata": {
-    "collapsed": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total number of data 200\n"
+      "total number of data 222\n"
      ]
     }
    ],
@@ -129,14 +119,19 @@
     "all_target = []\n",
     "# YOUR CODE HERE\n",
     "\n",
+    "for i in range(len(classes)) :\n",
+    "    data, target = load_pose_data(i)\n",
+    "    all_data = all_data + data\n",
+    "    all_target = all_target + target\n",
+    "\n",
     "print 'total number of data', len(all_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -157,9 +152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -175,26 +170,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SVC(C=100.0, cache_size=200, class_weight=None, coef0=0.0, degree=3,\n",
-       "  gamma=0.001, kernel='rbf', max_iter=-1, probability=False,\n",
-       "  random_state=None, shrinking=True, tol=0.001, verbose=False)"
+       "SVC(C=100.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape=None, degree=3, gamma=0.001, kernel='rbf',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "clf.fit(all_data, all_target) "
    ]
   },
   {
@@ -206,18 +201,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/sklearn/utils/validation.py:395: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and will raise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "  DeprecationWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(array([10]), 10)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,9 +229,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 40,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -242,10 +243,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -254,33 +253,33 @@
       "Classification report:\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00         5\n",
-      "          1       1.00      1.00      1.00         7\n",
-      "          2       1.00      1.00      1.00        15\n",
-      "          3       1.00      1.00      1.00         5\n",
-      "          4       1.00      1.00      1.00        20\n",
-      "          5       1.00      1.00      1.00         6\n",
-      "          6       1.00      1.00      1.00         8\n",
-      "          7       1.00      1.00      1.00         7\n",
-      "          8       1.00      1.00      1.00        18\n",
-      "          9       1.00      1.00      1.00         8\n",
-      "         10       1.00      1.00      1.00        41\n",
+      "          0       1.00      0.91      0.95        11\n",
+      "          1       1.00      1.00      1.00        11\n",
+      "          2       1.00      1.00      1.00        52\n",
+      "          3       1.00      1.00      1.00        10\n",
+      "          4       1.00      1.00      1.00        10\n",
+      "          5       1.00      1.00      1.00        10\n",
+      "          6       1.00      1.00      1.00        23\n",
+      "          7       1.00      1.00      1.00        26\n",
+      "          8       1.00      1.00      1.00        20\n",
+      "          9       0.97      1.00      0.98        30\n",
+      "         10       1.00      1.00      1.00        19\n",
       "\n",
-      "avg / total       1.00      1.00      1.00       140\n",
+      "avg / total       1.00      1.00      1.00       222\n",
       "\n",
       "\n",
       "Confusion matrix:\n",
-      "[[ 5  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  7  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0 15  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  5  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0 20  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  6  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  8  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  7  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0 18  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  8  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0 41]]\n"
+      "[[10  0  0  0  0  0  0  0  0  1  0]\n",
+      " [ 0 11  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0 52  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0 10  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0 10  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0 10  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0 23  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0 26  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0 20  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0 30  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0 19]]\n"
      ]
     }
    ],
@@ -288,7 +287,9 @@
     "expected = []\n",
     "predicted = []\n",
     "# YOUR CODE HERE\n",
-    "\n",
+    "expected = all_target\n",
+    "predicted =clf.predict(all_data)\n",
+    "    \n",
     "evaluate(expected, predicted)"
    ]
   },
@@ -301,45 +302,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Classification report:\n",
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "          0       1.00      1.00      1.00         5\n",
-      "          1       1.00      1.00      1.00         3\n",
-      "          2       1.00      1.00      1.00         5\n",
-      "          3       1.00      1.00      1.00         5\n",
-      "          4       0.91      1.00      0.95        10\n",
-      "          5       1.00      1.00      1.00         4\n",
-      "          6       1.00      1.00      1.00         2\n",
-      "          7       1.00      0.75      0.86         4\n",
-      "          8       1.00      1.00      1.00         8\n",
-      "          9       1.00      1.00      1.00         3\n",
-      "         10       1.00      1.00      1.00        11\n",
-      "\n",
-      "avg / total       0.98      0.98      0.98        60\n",
-      "\n",
-      "\n",
-      "Confusion matrix:\n",
-      "[[ 5  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  3  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  5  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  5  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0 10  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  4  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  2  0  0  0  0]\n",
-      " [ 0  0  0  0  1  0  0  3  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  8  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  3  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0 11]]\n"
+     "ename": "ValueError",
+     "evalue": "max() arg is an empty sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-43-2ba7013fcdd3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# YOUR CODE HERE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexpected\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredicted\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-40-23aa3dd87b58>\u001b[0m in \u001b[0;36mevaluate\u001b[0;34m(expected, predicted)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexpected\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredicted\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Classification report:\\n%s\\n\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclassification_report\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexpected\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredicted\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Confusion matrix:\\n%s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfusion_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexpected\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredicted\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/sklearn/metrics/classification.pyc\u001b[0m in \u001b[0;36mclassification_report\u001b[0;34m(y_true, y_pred, labels, target_names, sample_weight, digits)\u001b[0m\n\u001b[1;32m   1397\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mtarget_names\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1398\u001b[0m         \u001b[0mtarget_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'%s'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1399\u001b[0;31m     \u001b[0mname_width\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcn\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtarget_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1400\u001b[0m     \u001b[0mwidth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname_width\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlast_line_heading\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdigits\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1401\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: max() arg is an empty sequence"
      ]
     }
    ],
@@ -362,9 +338,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 44,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -382,18 +358,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 45,
    "metadata": {
-    "collapsed": false
+    "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/sklearn/utils/validation.py:395: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and will raise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "  DeprecationWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(array([10]), 10)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,6 +386,33 @@
     "clf2 = pickle.load(open(ROBOT_POSE_CLF))\n",
     "clf2.predict(all_data[-1]), all_target[-1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -429,9 +440,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
