--- a/joint_control/learn_posture.ipynb
+++ b/joint_control/learn_posture.ipynb
@@ -37,24 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: pylab import has clobbered these variables: ['clf', 'permutation']\n",
-      "`%matplotlib` prevents importing * from pylab and numpy\n"
      ]
     }
    ],
@@ -70,16 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Frog', 'HeadBack', 'Left', 'Knee', 'Crouch', 'Back', 'Belly', 'Right', 'Sit', 'Stand', 'StandInit']\n"
+      "['Right', 'Stand', 'StandInit', 'Frog', 'Knee', 'HeadBack', 'Back', 'Sit', 'Left', 'Crouch', 'Belly']\n"
      ]
     }
    ],
@@ -90,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -110,16 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total number of data 200\n"
+      "total number of data 222\n"
      ]
     }
    ],
@@ -128,16 +114,18 @@
     "all_data = []\n",
     "all_target = []\n",
     "# YOUR CODE HERE\n",
+    "for i in range(len(classes)) :\n",
+    "    data, target = load_pose_data(i)\n",
+    "    all_data = all_data + data\n",
+    "    all_target = all_target + target\n",
     "\n",
     "print 'total number of data', len(all_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# shuffule data\n",
@@ -157,10 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "clf = svm.SVC(gamma=0.001, C=100.)"
@@ -175,26 +161,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SVC(C=100.0, cache_size=200, class_weight=None, coef0=0.0, degree=3,\n",
-       "  gamma=0.001, kernel='rbf', max_iter=-1, probability=False,\n",
-       "  random_state=None, shrinking=True, tol=0.001, verbose=False)"
+       "SVC(C=100.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape=None, degree=3, gamma=0.001, kernel='rbf',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "clf.fit(all_data, all_target)"
    ]
   },
   {
@@ -206,18 +192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/sklearn/utils/validation.py:395: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and will raise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "  DeprecationWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(array([10]), 10)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,10 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def evaluate(expected, predicted):\n",
@@ -242,10 +232,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -254,33 +242,33 @@
       "Classification report:\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00         5\n",
-      "          1       1.00      1.00      1.00         7\n",
-      "          2       1.00      1.00      1.00        15\n",
-      "          3       1.00      1.00      1.00         5\n",
-      "          4       1.00      1.00      1.00        20\n",
-      "          5       1.00      1.00      1.00         6\n",
-      "          6       1.00      1.00      1.00         8\n",
-      "          7       1.00      1.00      1.00         7\n",
-      "          8       1.00      1.00      1.00        18\n",
-      "          9       1.00      1.00      1.00         8\n",
-      "         10       1.00      1.00      1.00        41\n",
+      "          0       1.00      0.91      0.95        11\n",
+      "          1       1.00      1.00      1.00        11\n",
+      "          2       1.00      1.00      1.00        52\n",
+      "          3       1.00      1.00      1.00        10\n",
+      "          4       1.00      1.00      1.00        10\n",
+      "          5       1.00      1.00      1.00        10\n",
+      "          6       1.00      1.00      1.00        23\n",
+      "          7       1.00      1.00      1.00        26\n",
+      "          8       1.00      1.00      1.00        20\n",
+      "          9       0.97      1.00      0.98        30\n",
+      "         10       1.00      1.00      1.00        19\n",
       "\n",
-      "avg / total       1.00      1.00      1.00       140\n",
+      "avg / total       1.00      1.00      1.00       222\n",
       "\n",
       "\n",
       "Confusion matrix:\n",
-      "[[ 5  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  7  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0 15  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  5  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0 20  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  6  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  8  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  7  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0 18  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  8  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0 41]]\n"
+      "[[10  0  0  0  0  0  0  0  0  1  0]\n",
+      " [ 0 11  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0 52  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0 10  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0 10  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0 10  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0 23  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0 26  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0 20  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0 30  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0 19]]\n"
      ]
     }
    ],
@@ -288,6 +276,8 @@
     "expected = []\n",
     "predicted = []\n",
     "# YOUR CODE HERE\n",
+    "expected = all_target\n",
+    "predicted =clf.predict(all_data)\n",
     "\n",
     "evaluate(expected, predicted)"
    ]
@@ -302,9 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -363,9 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -383,9 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -437,5 +421,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
